--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TSResponsiveBase</title>
+
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <div class="screen-size">
+        Screen Width: <span id="width"></span>px | Screen Height: <span id="height"></span>px
+    </div>
+
+    <!-- <h1>Hello World!</h1> -->
 </body>
 
 <script type="module" src="./scripts/out/index.js"></script>
